# Spotiflirtatious

./: .gitignore  README.md  SINO.ipynb  Spotifunhouse.ipynb  pyproject.toml
app/: app.py
app/assets/: style.css
app/backend/: backend.py
